--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,18 @@
 {
   "name": "client",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "normalize.css": "^8.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "sass": "^1.87.0",
